--- a/_config.yml
+++ b/_config.yml
@@ -291,4 +291,8 @@ defaults:
       share: true
       related: true
       show_date: true
+      toc: true
+      toc_sticky: true
+      toc_label: "On this page"
+      toc_icon: "fa-solid fa-book-bookmark"
 date_format: "%Y-%m-%d"
