--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,8 +4,12 @@ main:
     url: /categories/
   - title: "Tag"
     url: /tags/
+  - title: "By Year"
+    url: /year-archive/    
   - title: "Search"
     url: /search/
+
+
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
