--- a/_config.yml
+++ b/_config.yml
@@ -294,5 +294,5 @@ defaults:
       toc: true
       toc_sticky: true
       toc_label: "On this page"
-      toc_icon: "fab fa-fw fa-book-bookmark"
+      toc_icon: "fa-sharp fa-solid fa-book-bookmark"
 date_format: "%Y-%m-%d"
